# testy_uptrader

./: .gitignore  README.md  pyproject.toml  requirements.txt
testy_uptrader/: manage.py
testy_uptrader/menu/: admin.py  models.py  urls.py  utils.py  validators.py  views.py
testy_uptrader/menu/templates/: base.html
testy_uptrader/menu/templates/menu/: root.html
testy_uptrader/menu/templatetags/: menu.py
testy_uptrader/testy_uptrader/: asgi.py  settings.py  urls.py  wsgi.py
