[tool.poetry]
name = "testy_uptrader"
version = "0.1.0"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
